[package]
name = "get_holiday"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"

